--- a/startup/index.html
+++ b/startup/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>F1 Start Timer</title>
+  <title>반응속도 테스트 - F1</title>
   <link rel="icon" sizes="600x600" href="imgs/flag.png">
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#ffffff">
