--- a/startup/index.html
+++ b/startup/index.html
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .f1-lights {
@@ -34,7 +34,7 @@ body {
   --frames: 6;
   --frame: 0;
   display: block;
-  width: 125%;
+  width: 100%;
   max-width: 520px;
   background-image: url('lightall.png');
   background-repeat: no-repeat;
@@ -77,6 +77,88 @@ p {
   line-height: 1.4;
 }
 
+/* boards layout */
+.stage {
+  display: flex;
+  gap: 16px;
+  width: 100%;
+  max-width: none;
+  padding: 0;
+  box-sizing: border-box;
+  align-items: flex-start;
+}
+
+.board {
+  flex: 1;
+  min-width: 0;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  background: #fff;
+}
+
+.board h3 {
+  margin: 6px 0 8px;
+  font-size: 20px;
+}
+
+.board .list {
+  max-height: 40vh;
+  overflow-y: auto;
+  padding-left: 18px;
+  margin: 0;
+}
+
+.board .list li {
+  font-size: 16px;
+  line-height: 1.7;
+}
+
+/* remove ordered list default numbering for top list */
+.top-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.all-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+/* reset button */
+.reset-btn {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  font-size: 12px;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  background: #fafafa;
+  cursor: pointer;
+  opacity: 0.7;
+}
+.reset-btn:hover { opacity: 0.95; }
+
+.center-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-width: 0;
+  flex: 0 0 auto;
+}
+
+/* prevent layout shift when time text scales */
+.results { width: 100%; max-width: 520px; display: flex; flex-direction: column; align-items: center; }
+.time {
+  white-space: nowrap;
+  min-height: 1em;
+  display: inline-block;
+  transform-origin: center;
+}
+
 @keyframes bang {
   from {
     transform: scale(2);
@@ -90,14 +172,26 @@ a:link {
 </head>
 <body>
 
-  <div class="f1-lights">
-    <div class="lights-sprite" aria-hidden="true"></div>
+  <div class="stage">
+    <div class="board">
+      <h3>전체 기록</h3>
+      <ol class="list all-list"></ol>
+    </div>
+    <div class="center-col">
+      <div class="f1-lights">
+        <div class="lights-sprite" aria-hidden="true"></div>
+      </div>
+      <p>준비가 되었을때 클릭/탭 해주세요. 그 후 불이 모두 꺼질때 다시 클릭/탭 해주세요.</p>
+      <div class="results">
+        <div class="time">00.000</div>
+        <div class="best">최고기록: <span>00.000</span></div>
+      </div>
+    </div>
+    <div class="board">
+      <h3>TOP 10</h3>
+      <ol class="list top-list"></ol>
+    </div>
   </div>
-
-  <p>준비가 되었을때 클릭/탭 해주세요. 그 후 불이 모두 꺼질때 다시 클릭/탭 해주세요.</p>
-  <div class="results">
-    <div class="time">00.000</div>
-    <div class="best">최고기록: <span>00.000</span></div>
-  </div>
+  <button class="reset-btn" type="button">기록 초기화</button>
 </body>
 </html>
